--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,11 @@
 Package: chromVARmotifs
 Type: Package
 Title: Stores motifs as PWMatrixList objects 
-Version: 0.1.0
+Version: 0.2.0
 Authors@R: c(
     person("Alicia", "Schep", email = "aschep@gmail.com", role = c("aut","cre")),
     person("Jason", "Buenrostro", role = "ctb"),
+    person("Caleb", "Lareau", role = "ctb"),
     person("William","Greenleaf", role = "ths"),
     person("Stanford University", role = "cph"))
 Description: Stores several motifs as PWMatrixList objects for use in R with 
